# footbridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml  squash_commits.py
.github/: pixi.toml
.github/workflows/: coverage.yml  lint.yml  pypi-publish.yml  pytest-linux-pre.yml  pytest-linux.yml  pytest-macos.yml  pytest-windows.yml
docs/: api.rst  build_docs.bat  conf.py  installation.rst  pytest_coverage.json  references.rst  requirements.txt  user_guide.rst
docs/api/: classes.rst  functions.rst  tools.rst
docs/notebooks/: arcpy_comparison.ipynb  basic_usage.ipynb  database_structure.ipynb  duckdb_and_sedonadb.ipynb  fc_conversions.ipynb  field_calculations.ipynb  geoprocessing.ipynb  ibis_duckdb.ipynb  intro_example.ipynb  introduction.ipynb  pyarrow_demo.ipynb  rasters.ipynb
scripts/arcpy_env/: export.py  pixi.toml
src/footbridge/: __init__.py  _core.py  _geoprocessing.py  _utils.py  footbridge.py  utils.py
tests/: conftest.py  test_feature_class.py  test_feature_dataset.py  test_fixtures.py  test_geodatabase.py  test_geoprocessing.py  test_utils.py
