[project]
version = "1.0.10"
name = "footbridge"
authors = [{name = "Peter Von der Porten", email = "dev@corbelspatial.com"}]
dynamic = []
description = "Pythonic geodatabases for spatial data analysis "
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: GIS"
]
requires-python = ">=3.11"
dependencies = [
    "geojson",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.0",
    "pyarrow",
    "xmltodict>=1.0.0"
]

[project.optional-dependencies]
raster = ["gdal>=3.8"]

[project.urls]
homepage = "https://pypi.org/project/footbridge/"
documentation = "https://footbridge.readthedocs.io/en/latest/"
repository = "https://github.com/corbel-spatial/footbridge"
issues = "https://github.com/corbel-spatial/footbridge/issues"
changelog = "https://github.com/corbel-spatial/footbridge/blob/main/CHANGELOG.md"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.idea",
    "/.run",
    "/docs",
    "/.readthedocs.yaml"
]

[tool.hatch.build.targets.wheel]
packages = ["src/footbridge"]
